DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Dec-30-2007 patrick     Improved const correctness for most input-related
                        classes. This should not break any existing code, but
                        some code could reduce data copying by using const
                        references to returned data.
                        NEW VERSION: 1.3.17
Nov-18-2007 patrick     The X,Y position for mouse events is now reported
                        using a lower left-hand corner origin to match the
                        window positioning convention of Juggler.
                        NEW VERSION: 1.3.16
Nov-18-2007 patrick     Replaced gadget::InputAreaCocoa::updateOriginAndSize()
                        with gadget::InputAreaCocoa::resize().
                        NEW VERSION: 1.3.15
Sep-04-2007 patrick     Use new environment variable GADGET_DATA_DIR as a way
                        to look up files in GADGET_BASE_DIR/share/gadgeteer.
                        NEW VERSION: 1.3.14
Sep-04-2007 patrick     Set GADGET_BASE_DIR automatically on all platforms.
Jul-28-2007 aronb       Fixed device sharing in cluster configurations.
                        NEW VERSION: 1.3.13
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 1.3.12
Jun-27-2007 patrick     Removed the need for overriding operator delete in
                        subclasses of gadget::Input.
                        NEW VERSION: 1.3.11