@@ -165,10 +165,7 @@ bool PuckDevice::sample()
 	analogData submit(6);
 	for (unsigned int i = 0; i < _axes.size(); i++)
 	{
-	    float normalize;
-	    float value = _axes[i].getAnalog();
-	    gadget::Analog::normalizeMinToMax(value, normalize);
-	    submit[i] = normalize;
+	    submit[i] = _axes[i].getAnalog();
 	}
 	gadget::Analog::addAnalogSample(submit);
 	return true;
@@ -197,10 +194,7 @@ void PuckDevice::initBuffers()
 {
     for (unsigned int i = 0; i < _axes.size(); i++)
     {
-	float normalize;
-	float value = 0;
-	gadget::Analog::normalizeMinToMax(value, normalize);
-	_axes[i] = normalize;
+	_axes[i] = 0.0f;
     }
     for (unsigned int i = 0; i < _buttons.size(); i++)
 	_buttons[i] = 0;
