@@ -613,9 +613,7 @@ void Vrpn::analogChange(const vrpn_ANALOGCB& b)
          << "Analog #" << i << " value " << b.channel[i] << std::endl
          << vprDEBUG_FLUSH;
 
-      float value(0.0f);
-      normalizeMinToMax(b.channel[i], value);
-      mAnalogs[i] = value;
+      mAnalogs[i] = b.channel[i];
    }
 }
 
