@@ -134,11 +134,7 @@ void TrackdAPIController::updateData()
 
    for (int j=0;j<mControllerReader->trackdGetNumberOfValuators();j++)
    {
-       // TrackdController doesn't have a sample, so we do
-       // normalization here...
-       float f;
-       this->normalizeMinToMax (mControllerReader->trackdGetValuator(j), f);
-       mCurValuators[j] = f;
+       mCurValuators[j] = mControllerReader->trackdGetValuator(j);
        mCurValuators[j].setTime();
    }
 
